--- a/index.css
+++ b/index.css
@@ -7,7 +7,21 @@ body {
 }
 
 body {
-  color: #fff;
+  width: 100%;
+  height: 100vh;
+  color: #0b0b0b;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
 }
 
 .clicked {
@@ -39,4 +53,11 @@ body {
   height: 100%;
   z-index: -1;
   animation: fadeIn 0.5s linear;
+}
+
+input {
+  background: none;
+  border: none;
+  border-bottom: 2px solid #0b0b0b;
+  outline: none;
 }
