--- a/index.css
+++ b/index.css
@@ -7,13 +7,15 @@ body {
 }
 
 body {
-  width: 100%;
-  height: 100vh;
   color: #0b0b0b;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 200px;
+}
+::placeholder {
+  color: #0b0b0b;
 }
 
 ul {
